	#13533 submitted by Daniel Berger.
	* test/test_gem_installer.rb: Win32 path fix.  Patch #13528 submitted
	by Daniel Berger.
	* test/gemutilities.rb: Make the platform be a win32 platform on
	win32.  Fixes confusion in generate_bin_symlink tests.  Patch #13529
	submitted by Daniel Berger.
	* test/test_gem_specification.rb: Sequel to above.  Patch
	#13535 submitted by Daniel Berger.

2007-08-24  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Fix #full_name for versionless
	platforms.
	* lib/rubygems/command_manager.rb: We're only looking for NameError.
	* lib/rubygems/command.rb: 1.9 fix.
	* lib/rubygems/format.rb: ditto.
	* lib/rubygems/installer.rb: ditto.

2007-08-24  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 0.9.4.4

2007-08-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/platform.rb: Add HPUX, AIX and NetBSD.  Thanks to
	Daniel Berger, Yutaka KANEMOTO and Andre Nathan respectively.
	* lib/rubygems/installer.rb: Move all option setting to #initialize to
	make `gem pristine` work again.
	* lib/rubygems/commands/environment_command.rb: Include platforms.
	* lib/rubygems/dependency_installer.rb: Support local non-root
	installation.

2007-08-22  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb: Don't reinstall dependencies
	existing in the install dir.  Don't install dependencies for older
	versions of the gem we're installing.  #installed_gems now contains
	loaded gemspecs.  Always prefer local gems.  Handle globs correctly.
	All deps are now installed into the install_dir.
	* lib/rubygems/commands/install_command.rb: Switch to
	Gem::DependencyInstaller.  Warn when -y is given, it will be removed.
	Try our best to install everything the user asked.
	* lib/rubygems.rb: Gem.bindir now handles Pathname correctly.
	* lib/rubygems/remote_fetcher.rb: Don't downcase anymore.

2007-08-21  Eric Hodel  <drbrain@segment7.net>
